[metadata]
name = pcb-msla
version = 0.1.0
url = https://github.com/ingobecker/pcb-msla
author = Ingo Becker
author_email = ingo+pcbmsla@orgizm.net
description = Convert PCB gerber files into elegoo mars/photon files.
long_description = file: README.md
classifiers = 
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Environment :: Console
    Development Status :: 4 - Beta

[options]
python_requires = >=3.5
packages = pcb_msla
include_package_data = false
install_requires =
    click
    pycairo
    pyphotonfile @ git+https://github.com/fookatchu/pyphotonfile@master#egg=pyhpotonfile
    pcb-tools @ git+https://github.com/ingobecker/pcb-tools@master#egg=pcb-tools
    pyyaml

[options.entry_points]
console_scripts =
    pcb-msla=pcb_msla.main:cli

[options.package_data]
pcb_msla = data/*
